--- a/content/_index.html
+++ b/content/_index.html
@@ -11,10 +11,10 @@ images = ["hortacloud_logo.png"]
 	<img src="hortacloud_logo.png" style="padding: 0pt 20pt 20pt 0pt;">
 
 	<p class="lead display-4 mb-5">Collaborative neuron annotation in the cloud</p>
-	<a class="btn btn-lg btn-secondary me-3 mb-4" href="{{< relref "/docs" >}}">
+	<a class="btn btn-lg btn-primary me-3 mb-4" href="{{< relref "/docs" >}}">
 		Documentation
 	</a>
-	<a class="btn btn-lg btn-primary me-3 mb-4" href="{{< relref "/instances" >}}">
+	<a class="btn btn-lg btn-secondary me-3 mb-4" href="{{< relref "/instances" >}}">
 		Login to HortaCloud &nbsp;<i class="fas fa-sign-in-alt ml-1"></i>
 	</a>
 	<p></p>
