--- a/content/instances.html
+++ b/content/instances.html
@@ -23,7 +23,7 @@ Each instance can host any number of virtual desktops for authorized users.
         <p>Try HortaCloud without an account!</p>
         <p>AWS region: us-east-1</p>
     
-        <a class="btn btn-lg btn-primary disabled">
+        <a class="btn btn-lg btn-secondary disabled">
             Coming soon
         </a>
 
@@ -38,13 +38,14 @@ Each instance can host any number of virtual desktops for authorized users.
         <p>Private instance for Janelia researchers and collaborators</p>
         <p>AWS region: us-east-1</p>
 
-        <a class="btn btn-lg btn-primary" href="https://hortacloud-portal.janelia.org">
+        <a class="btn btn-lg btn-secondary me-3" href="https://hortacloud-portal.janelia.org">
             Login to HortaCloud-Janelia &nbsp;<i class="fas fa-sign-in-alt ml-1"></i>
         </a>
 
-        <a class="btn btn-lg btn-primary" href="mailto:hortacloud@janelia.org">
+        <a class="btn btn-lg btn-primary me-3" href="mailto:hortacloud@janelia.org">
             Request Account &nbsp;<i class="fas fa-envelope ml-1"></i>
         </a>
+
 
     </div>
 </div>
@@ -55,7 +56,7 @@ Each instance can host any number of virtual desktops for authorized users.
         <p>Private instance for AIND researchers and collaborators</p>
         <p>AWS region: us-west-2</p>
 
-        <a class="btn btn-lg btn-primary" href="https://horta.allenneuraldynamics.org">
+        <a class="btn btn-lg btn-secondary" href="https://horta.allenneuraldynamics.org">
             Login to HortaCloud-AIND &nbsp;<i class="fas fa-sign-in-alt ml-1"></i>
         </a>
 
