--- a/content/team.html
+++ b/content/team.html
@@ -11,7 +11,7 @@ menu:
 
 <div class="text-horta-secondary3" style="margin-bottom: 15pt; text-align: center;">
 HortaCloud was developed by Scientific Computing Software at Janelia Research Campus in collaboration with the Janelia MouseLight project team,<br>
-as well as the Allen Institute for Neural Dynamics. Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough for creating the HortaCloud logo.
+as well as the Allen Institute for Neural Dynamics. Contributors are listed in alphabetical order. 
 </div>
 
 <h2 style="text-align: center;">Advisors</h2>
@@ -62,7 +62,7 @@ as well as the Allen Institute for Neural Dynamics. Contributors are listed in a
 
 </div>
 
-<h2 style="text-align: center;">Core Development Team</h2>
+<h2 style="text-align: center;">Software Development Team</h2>
 
 <div class="row">
 
@@ -106,48 +106,82 @@ as well as the Allen Institute for Neural Dynamics. Contributors are listed in a
 <h2 style="text-align: center;">Contributors</h2>
 
 <div class="row">
+
+    <div class="col-md-4 col-sm-6 mb-4">
+        <div class="person card-body">
+            <h5 class="card-title">Cameron Arshadi</h5>
+            <p class="card-text">Allen Institute for Neural Dynamics</p>
+        </div>
+    </div>
+
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Christopher Bruns</h5>
-            <p class="card-text">Formerly HHMI Janelia Research Campus<br>Software Engineer</p>
+            <p class="card-text">Formerly HHMI Janelia Research Campus</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Patrick Edson</h5>
-            <p class="card-text">Leap Scientific<br>Software Engineer</p>
+            <p class="card-text">Leap Scientific</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Takashi Kawase</h5>
-            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus</p>
         </div>
     </div>
     
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Mary Lay</h5>
-            <p class="card-text">HHMI Janelia Research Campus<br>Annotator</p>
+            <p class="card-text">HHMI Janelia Research Campus</p>
+        </div>
+    </div>
+
+    <div class="col-md-4 col-sm-6 mb-4">
+        <div class="person card-body">
+            <h5 class="card-title">Sean Murphy</h5>
+            <p class="card-text">Formerly HHMI Janelia Research Campus</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Alyssa Stark</h5>
-            <p class="card-text">HHMI Janelia Research Campus<br>Annotator</p>
+            <p class="card-text">HHMI Janelia Research Campus</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Rob Svirskas</h5>
-            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus</p>
         </div>
     </div>
 
+    <div class="col-md-4 col-sm-6 mb-4">
+        <div class="person card-body">
+            <h5 class="card-title">Emily Tenshaw</h5>
+            <p class="card-text">HHMI Janelia Research Campus</p>
+        </div>
+    </div>
+
+    <div class="col-md-4 col-sm-6 mb-4">
+        <div class="person card-body">
+            <h5 class="card-title">Monet Weldon</h5>
+            <p class="card-text">HHMI Janelia Research Campus</p>
+        </div>
+    </div>
+
+</div>
+
+<div class="text-horta-secondary3" style="margin-bottom: 15pt; text-align: center;">
+    Thanks to everyone else who has helped make HortaCloud possible!
+    Special thanks to Brie Yarbrough for creating the HortaCloud logo.
 </div>
 
 {{< /blocks/section >}}
