fix: Keeps new logo constrained to screen width.

--- a/content/_index.html
+++ b/content/_index.html
@@ -8,7 +8,7 @@ images = ["hortacloud_logo.png"]
 {{< blocks/cover image_anchor="top" height="full" color="dark" >}}
 <div class="mx-auto">
 
-	<img src="hortacloud_logo.png" style="padding: 0pt 20pt 20pt 0pt;">
+	<img src="hortacloud_logo.png" style="padding: 0pt 0pt 20pt 0pt; max-width:100%">
 
 	<p class="lead display-4 mb-5">Collaborative neuron annotation in the cloud</p>
 	<a class="btn btn-lg btn-primary me-3 mb-4" href="{{< relref "/docs" >}}">
