--- a/content/instances.html
+++ b/content/instances.html
@@ -14,6 +14,7 @@ menu:
 <p class="text-horta-secondary3">
 A HortaCloud instance is a private cloud environment <a href="/docs/administration/aws/">deployed to AWS</a> by an institution or organization. 
 Each instance can host any number of virtual desktops for authorized users.
+All instances allow access to the images used to create the reconstructions available in the <a hreef="https://ml-neuronbrowser.janelia.org">Mouselight Neuron Browser</a>.
 </p>
 
 <div class="mt-4">
@@ -35,7 +36,7 @@ Each instance can host any number of virtual desktops for authorized users.
     <h3><i class="fa-solid fa-cloud"></i> Janelia Research Campus</h3>
     <div class="ps-4 parabox">
         
-        <p>Private instance for Janelia researchers and collaborators</p>
+        <p>Instance used by Janelia researchers and collaborators</p>
         <p>AWS region: us-east-1</p>
 
         <a class="btn btn-lg btn-secondary me-3" href="https://hortacloud-portal.janelia.org">
@@ -53,7 +54,7 @@ Each instance can host any number of virtual desktops for authorized users.
 <div class="mt-5">
     <h3><i class="fa-solid fa-cloud"></i> Allen Institute for Neural Dynamics</h3>
     <div class="ps-4 parabox">
-        <p>Private instance for AIND researchers and collaborators</p>
+        <p>Instance used by AIND researchers and collaborators</p>
         <p>AWS region: us-west-2</p>
 
         <a class="btn btn-lg btn-secondary" href="https://horta.allenneuraldynamics.org">
