--- a/content/instances.html
+++ b/content/instances.html
@@ -14,7 +14,7 @@ menu:
 <p class="text-horta-secondary3">
 A HortaCloud instance is a private cloud environment <a href="/docs/administration/aws/">deployed to AWS</a> by an institution or organization. 
 Each instance can host any number of virtual desktops for authorized users.
-All instances allow access to the images used to create the reconstructions available in the <a hreef="https://ml-neuronbrowser.janelia.org">Mouselight Neuron Browser</a>.
+All instances allow access to the images used to create the reconstructions available in the <a href="https://ml-neuronbrowser.janelia.org">Mouselight Neuron Browser</a>.
 </p>
 
 <div class="mt-4">
