suggested copy from tiago

--- a/content/instances.html
+++ b/content/instances.html
@@ -21,7 +21,8 @@ All instances allow access to the images used to create the reconstructions avai
 	<h3><i class="fa-solid fa-cloud"></i> Demo instance (session time limited)</h3>
     <div class="ps-4 parabox">
         
-        <p>Try HortaCloud without an account!</p>
+        <p>You can try HortaCloud with this demo instance which we provide free of charge to the community. 
+            <br>The session time is limited to 1 hour to avoid strain on our resources.</p>
         <p>AWS region: us-east-1</p>
     
         <a class="btn btn-lg btn-secondary disabled">
@@ -57,8 +58,12 @@ All instances allow access to the images used to create the reconstructions avai
         <p>Instance used by AIND researchers and collaborators</p>
         <p>AWS region: us-west-2</p>
 
-        <a class="btn btn-lg btn-secondary" href="https://horta.allenneuraldynamics.org">
+        <a class="btn btn-lg btn-secondary me-3" href="https://horta.allenneuraldynamics.org">
             Login to HortaCloud-AIND &nbsp;<i class="fas fa-sign-in-alt ml-1"></i>
+        </a>
+
+        <a class="btn btn-lg btn-primary me-3" href="mailto:jayaramc@alleninstitute.org">
+            Request Account &nbsp;<i class="fas fa-envelope ml-1"></i>
         </a>
 
     </div>
