added morphofish paper

--- a/content/publications.html
+++ b/content/publications.html
@@ -26,11 +26,16 @@ HortaCloud has been featured in the following publications:
 </p>
 
 <ul class="publication-list">
-  <!--
-  <li>(morphoFISH citation) (To be added)</li>
 
+  <li>Tiago A. Ferreira, Mark Eddison, Monique Copeland, Mary Lay, Emily Tenshaw, Monet Weldon, David Schauder, Donald J. Olbris, 
+    Konrad Rokicki, Nelson Spruston, Paul W. Tillberg, Wyatt Korff, Joshua T. Dudman, The MouseLight Project Team. 
+    <u>Discovery of neuronal cell types by pairing whole cell reconstructions with RNA expression profiles.</u> bioRxiv preprint. 
+    doi: <a href="https://doi.org/10.1101/2024.12.30.630829">10.1101/2024.12.30.630829</a>
+  </li>
+
+  <!--
   <li>Emily Tenshaw, Mary Lay, Alyssa Stark, Monet Weldon, Cameron Arshadi, Ahmad Elsayed, Daniel Ramirez, Bruno Dos Santos, Amina Zafar, Mashtura Hasan, 
-    Regina Blake, Jayaram Chandrashekar, Tiago A Ferreira . Reconstructing Complete Neurons in Whole Brains Using HortaCloud. 
+    Regina Blake, Jayaram Chandrashekar, Tiago A Ferreira. Reconstructing Complete Neurons in Whole Brains Using HortaCloud. 
     Protocol exchange https://protocols.io/view/reconstructing-complete-neurons-in-whole-brains-us-c9vkz64w
   </li>
   -->
