added preprint reference

--- a/content/publications.html
+++ b/content/publications.html
@@ -12,12 +12,15 @@ menu:
 <h2>Publications</h2>
 
 <p class="text-horta-secondary3" style="margin-top: 18pt;">
-If you use HortaCloud in your work, please cite the following publications:
+If you use HortaCloud in your work, please cite the following publication:
 </p>
 
 <ul class="publication-list">
   <li>
-    HortaCloud paper (in prep)
+    Konrad Rokicki, David Schauder, Donald J. Olbris, Cristian Goina, Jody Clements, Patrick Edson, Takashi Kawase, Robert Svirskas, Cameron Arshadi, David Feng, Jayaram Chandrashekar, Tiago A. Ferreira, MouseLight Project Team
+    <u>HortaCloud: An Open and Collaborative Platform for Whole Brain Neuronal Reconstructions</u>. 
+    bioRxiv 2025.03.13.642887; 
+    doi: <a href="https://doi.org/10.1101/2025.03.13.642887">10.1101/2025.03.13.642887</a>
   </li>
 </ul>
 
@@ -29,27 +32,27 @@ HortaCloud has been featured in the following publications:
 
   <li>Tiago A. Ferreira, Mark Eddison, Monique Copeland, Mary Lay, Emily Tenshaw, Monet Weldon, David Schauder, Donald J. Olbris, 
     Konrad Rokicki, Nelson Spruston, Paul W. Tillberg, Wyatt Korff, Joshua T. Dudman, The MouseLight Project Team. 
-    <u>Discovery of neuronal cell types by pairing whole cell reconstructions with RNA expression profiles.</u> bioRxiv preprint. 
+    <u>Discovery of neuronal cell types by pairing whole cell reconstructions with RNA expression profiles</u>.
+    bioRxiv 2024.12.30.630829;
     doi: <a href="https://doi.org/10.1101/2024.12.30.630829">10.1101/2024.12.30.630829</a>
   </li>
 
-  <!--
-  <li>Emily Tenshaw, Mary Lay, Alyssa Stark, Monet Weldon, Cameron Arshadi, Ahmad Elsayed, Daniel Ramirez, Bruno Dos Santos, Amina Zafar, Mashtura Hasan, 
-    Regina Blake, Jayaram Chandrashekar, Tiago A Ferreira. Reconstructing Complete Neurons in Whole Brains Using HortaCloud. 
-    Protocol exchange https://protocols.io/view/reconstructing-complete-neurons-in-whole-brains-us-c9vkz64w
+  <li>Emily Tenshaw, Mary Lay, Alyssa Stark, Monet Weldon, Cameron Arshadi, Ahmad Elsayed, Daniel Ramirez, Bruno Dos Santos, Amina Zafar, Mashtura Hasan, Regina Blake, Jayaram Chandrashekar, Tiago A Ferreira. 
+    <u>Reconstructing Complete Neurons in Whole Brains Using HortaCloud</u>. protocols.io 2025.
+    doi: <a href="https://dx.doi.org/10.17504/protocols.io.yxmvm38wnl3p/v1">10.17504/protocols.io.yxmvm38wnl3p</a>
   </li>
-  -->
 
   <li>
-    Winnubst J, Bas E, Ferreira TA, Wu Z, Economo MN, Edson P, Arthur BJ, Bruns C, Rokicki K, Schauder D, Olbris DJ, Murphy SD, Ackerman DG, Arshadi C, Baldwin P, Blake R, Elsayed A, Hasan M, Ramirez D, Dos Santos B, 
-    Weldon M, Zafar A, Dudman JT, Gerfen CR, Hantman AW, Korff W, Sternson SM, Spruston N, Svoboda K, Chandrashekar J. 
-    <u>Reconstruction of 1,000 Projection Neurons Reveals New Cell Types and Organization of Long-Range Connectivity in the Mouse Brain</u>. Cell. 2019 Sep 19;179(1):268-281.e13. 
+    Winnubst J, Bas E, Ferreira TA, Wu Z, Economo MN, Edson P, Arthur BJ, Bruns C, Rokicki K, Schauder D, Olbris DJ, Murphy SD, Ackerman DG, Arshadi C, Baldwin P, Blake R, Elsayed A, Hasan M, Ramirez D, Dos Santos B, Weldon M, Zafar A, Dudman JT, Gerfen CR, Hantman AW, Korff W, Sternson SM, Spruston N, Svoboda K, Chandrashekar J. 
+    <u>Reconstruction of 1,000 Projection Neurons Reveals New Cell Types and Organization of Long-Range Connectivity in the Mouse Brain</u>. Cell. 2019 Sep 19;179(1):268-281.e13.
     doi: <a href="https://doi.org/10.1016/j.cell.2019.07.042">10.1016/j.cell.2019.07.042</a>
   </li>
 
   <li>
-    Economo MN, Clack NG, Lavis LD, Gerfen CR, Svoboda K, Myers EW, Chandrashekar J. <u>A platform for brain-wide imaging and reconstruction of individual neurons</u>. 
-    Elife. 2016 Jan 20;5:e10566. doi: <a href="https://doi.org/10.7554/eLife.10566">10.7554/eLife.10566</a> 
+    Economo MN, Clack NG, Lavis LD, Gerfen CR, Svoboda K, Myers EW, Chandrashekar J. 
+    <u>A platform for brain-wide imaging and reconstruction of individual neurons</u>. 
+    Elife. 2016 Jan 20;5:e10566. 
+    doi: <a href="https://doi.org/10.7554/eLife.10566">10.7554/eLife.10566</a> 
   </li>
 </ul>
 
